03-liquidsoap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liquidsoap
  namespace: airadio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liquidsoap
  template:
    metadata:
      labels:
        app: liquidsoap
    spec:
      containers:
      - name: liquidsoap
        image: savonet/liquidsoap:v2.3.3
        command: ["liquidsoap","/etc/liquidsoap/radio.liq"]
        volumeMounts:
        - name: config
          mountPath: /etc/liquidsoap
          readOnly: true
        - name: music
          mountPath: /radio/music
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: "1"
            memory: 1Gi
      volumes:
      - name: config
        configMap:
          name: liquidsoap-config
      - name: music
        nfs:
          server: 192.168.2.5
          path: /volume1/radio/music
          readOnly: true
