radio-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: radio-api
  namespace: airadio
spec:
  type: ClusterIP
  selector:
    app: radio-api
  ports:
  - name: http
    port: 8080
    targetPort: 8080
